# boost_competency_test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main11.cpp  main17.cpp  minimal_example.hpp  safe_float.hpp
Boost.SafeFloat/: competency-test-cpp11.hpp  competency-test-cpp17.hpp  fail_test_1_cpp_17.cpp  test-cpp11.cpp  test-cpp11.hpp  test-cpp17.cpp  test-cpp17.hpp  vectorize.hpp
